# PythonCpp

./: .gitignore  CMakeLists.txt  PythonInterpreter.cpp  PythonList.h  PythonObject.h  PythonSys.h  PythonTypeTraits.h  README.md
.github/workflows/: ubuntu_clang_release.yml  ubuntu_gcc_build.yml  ubuntu_gcc_debug.yml  ubuntu_gcc_release.yml
include/PythonCpp/: Callable.h  Defines.h  Error.h  Interpreter.h  List.h  Object.h  PyCppDefines.h  PythonCallable.h  PythonCpp.h  PythonError.h  PythonInterpreter.h  PythonList.h  PythonObject.h  PythonSys.h  PythonTuple.h  PythonTypeTraits.h  PythonUtilities.h  Sys.h  Tuple.h  TypeTraits.h  Utilities.h
samples/: pyplot.cpp
src/: Callable.cpp  Error.cpp  Interpreter.cpp  Object.cpp  PythonCallable.cpp  PythonCallable.h  PythonCpp.h  PythonError.cpp  PythonError.h  PythonInterpreter.cpp  PythonInterpreter.h  PythonList.h  PythonObject.cpp  PythonObject.h  PythonSys.cpp  PythonSys.h  PythonTuple.h  PythonTypeTraits.h  PythonUtilities.cpp  PythonUtilities.h  Sys.cpp  Utilities.cpp
tests/: PythonTypeTraitsTests.cpp
